@@ -3,6 +3,8 @@ LIST OF CHANGES
 
  - Fix perlbrew installation by installing libdevel-patchperl-perl in
    GitHub runner.
+ - Updated ORM classes by ingesting changes for the 'sample' table from the
+   production database. Added a class for the 'aliqoute' table.
 
 release 6.34.0 (2024-10-24)
  - Added new delegated methods to WTSI::DNAP::Warehouse::Schema::Result::IseqFlowcell,
